<resources>
    <string name="app_name">GeoHunt</string>

    <string name="claim_hunt">Claim</string>

    <!-- All string for formatting message like "published just now" -->
    <string name="just_now">just now</string>
    <string name="published_format">%s</string>
    <string name="claimed_format">claimed %s</string>

    <string name="navigation.home">Home</string>
    <string name="navigation.explore">Explore</string>
    <string name="navigation.create">Create a hunt</string>
    <string name="navigation.active_hunts">Active hunts</string>
    <string name="navigation.profile">Profile</string>
    <string name="title_main_activity">GeoHunt</string>
    <string name="title_activity_login">GeoHunt</string>
    <string name="date_range_formatting">from %1$s to %2$s</string>
    <string name="start_in_formatter">Starts %s</string>
    <string name="end_in_formatter">Ends %s</string>
    <string name="already_terminated">terminated</string>

    <string name="sign_in">Sign in</string>

    <string name="profile_number_of_posts_subtitle">posts</string>
    <string name="profile_number_of_hunts_subtitle">hunts</string>
    <string name="profile_score_subtitle">points</string>

    <string name="challenges">Challenges</string>
    <string name="hunts">Hunts</string>

    <string name="no_past_challenges">No challenges :(</string>
    <string name="no_past_hunts">No past hunts ;(</string>

    <string name="settings">Settings</string>
    <string name="navigation_back">Back</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit">Edit</string>
    <string name="display_name">Display name</string>

    <string name="log_out">Log out</string>
    <string name="log_out_confirmation">Are you sure to log out?</string>

    <string name="save">Save</string>
    <string name="saving">Saving…</string>

    <string name="leaderboard">Leaderboard</string>

    <string name="challenge_settings_difficulty">Difficulty</string>
    <string name="challenge_settings_date">Date</string>
    <string name="challenge_settings_date_never">Never</string>

    <string name="range_date">Date</string>

    <!-- Strings defined for the tutorial -->
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="welcome_screen_detail">The fun, interactive, engaging and challenging treasure hunt game!</string>
    <string name="tutorial_first_screen_title"> Create your own challenges!</string>
    <string name="tutorial_first_screen_description">Create your own challenges and share them with the community!</string>
    <string name="tutorial_second_screen_title">Explore the map!</string>
    <string name="tutorial_second_screen_description">Explore the map and find challenges near you!</string>
    <string name="tutorial_third_screen_title">Complete challenges!</string>
    <string name="tutorial_third_screen_description">Complete challenges and earn points!</string>
    <string name="tutorial_fourth_screen_title">Compete as a team!</string>
    <string name="tutorial_fourth_screen_description">Join a team and complete bounties together!</string>
    <string name="tutorial_get_started">Get started</string>
    <string name="tutorial_skip">Skip</string>
    <string name="go_left">Go left</string>
    <string name="go_right">Go right</string>

    <string name="challenge_create_agree_community_link"><![CDATA[By creating a challenge, you agree to GeoHunt\'s <a href="https://github.com/SDP-GeoHunt/geo-hunt/wiki/Community-Guidelines">Community Guidelines</a>]]></string>
    <string name="claim_create_agree_community_link"><![CDATA[By claiming a challenge, you agree to GeoHunt\'s <a href="https://github.com/SDP-GeoHunt/geo-hunt/wiki/Community-Guidelines">Community Guidelines</a>]]></string>
    <string name="join_hunt">Hunt</string>
    <string name="less_button">less…</string>
    <string name="more_button">more…</string>
    <string name="claim_challenge_button">Submit claim</string>
    <string name="create_challenge_button">Create challenge</string>

    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="unfollow">Unfollow</string>
    <string name="require_camera_permission">GeoHunt requires permission to the camera in order to use this feature</string>
    <string name="require_camera_permission_button">Request camera permission</string>
    <string name="require_location_permission">GeoHunt requires the precise location of this device in order to use this feature</string>
    <string name="require_location_permission_button">Request location permission</string>

    <string name="error_fetching_page">An error occurred when fetching the profile page.</string>
    <string name="private_profile_page">You do not have access to this user\'s profile page.</string>
    <string name="agree_community_html"><![CDATA[By creating a challenge, you agree to GeoHunt\'s <a href="https://github.com/SDP-GeoHunt/geo-hunt/wiki/Community-Guidelines">Community Guidelines</a>]]></string>

    <!-- active hunts -->
    <string name="active_hunts_empty_challenge">"No challenges yet…\nGo pick some challenges to begin your hunt!"</string>
    <string name="active_hunts_empty_challenge_button">"Search nearby challenges"</string>
    <string name="active_hunts_empty_bounties">"No bounties yet…\nGo pick some bounties to begin your hunt!"</string>
    <string name="active_hunts_empty_bounties_button">"Search nearby bounties"</string>
    <string name="active_hunts_expires_never">Expires never !</string>

    <!-- settings -->
    <string name="app_settings">App settings</string>
    <string name="privacy_settings">Privacy settings</string>

    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>

    <!-- buttons -->
    <string name="confirm">Confirm</string>
    <string name="claim">Claim</string>

    <!-- team progress -->
    <string name="claim_confirmation_alert_title">Confirm claim</string>
    <string name="claim_confirmation_alert_text">Are you sure you want to claim this challenge ?</string>
    <string name="unknown_distance">Unknown distance</string>

    <!-- profile visibility -->
    <string name="profile_visibility">Profile visibility</string>
    <string name="public_word">Public</string>
    <string name="public_desc">Your profile will be visible to everyone.</string>
    <string name="following_only">Following only</string>
    <string name="following_only_desc">Your profile will be visible by users that you follow.</string>
    <string name="private_word">Private</string>
    <string name="private_desc">Your profile will be visible only by you.</string>

    <string name="statistics_title">Statistics</string>
    <string name="statistics_empty_screen_text">You haven\'t claimed enough challenges yet</string>
    
    <string name="new_challenge_notification_title">New Challenge!</string>
    <string name="new_challenge_notification_message">A new challenge just got posted, check it out!</string>
    <string name="team_chat_title">Team chat</string>
    <string name="message_send_button">Send</string>

    <!-- Bounty -->
    <string name="claim_bounty_challenge_button">Submit claim</string>
    <string name="photo_of_the_claim_taken">Photo just taken of the claim</string>

    <!-- home feed/bounty selector -->
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="bounties">Bounties</string>
    <string name="join">Join</string>
    <string name="no_bounties">No available bounties at the moment.</string>
    <string name="starts_in">Starts %1$s</string>
    <string name="ends">Ends %1$s</string>
    <string name="expired_since">Expired %1$s</string>

    <string name="starts_in_bang">Starts %1$s !</string>
    <string name="ends_in_bang">Ends %1$s !</string>
    <string name="expired_since_bang">Expired %1$s !</string>

    <string name="team_name">Team name</string>
    <string name="enter_team_name">Enter the new team\'s name</string>
    <string name="create_team">Create team</string>
    <string name="join_team">Join team</string>
    <string name="leave_team">Leave team</string>
    <string name="delete_team">Delete team</string>
    <string name="select_team_for_bounty">Select team for %1$s</string>
    <string name="see">See</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="create_bounty_button">Create bounty</string>
    <string name="Ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="renaming_bounty_popup_title">Renaming bounty</string>
    <string name="renaming_bounty_placeholder"><![CDATA[<Name of Bounty>]]></string>
    <string name="pick_location_popup_title">Pick a location</string>
    <string name="location_picker_placeholder"><![CDATA[<Select>]]></string>
    <string name="claimed">Claimed</string>
    <string name="leave_the_hunt">Leave the hunt</string>
    <string name="expires">Expires %1$s</string>
    <string name="empty_feed_title">This place is a bit empty.</string>
    <string name="empty_feed_subtitle">You can check for nearby challenges on the map !</string>
    <string name="open_the_map">Open the map</string>

    <plurals name="teams_count">
        <item quantity="zero">no teams</item>
        <item quantity="one">1 team</item>
        <item quantity="other">%d teams</item>
    </plurals>

    <plurals name="members_count">
        <item quantity="zero">no member</item>
        <item quantity="one">1 member</item>
        <item quantity="other">%d members</item>
    </plurals>
</resources>